# Aganitha_Python

./: .gitignore.txt  README.md  covid_results.csv  industry_only.csv  industry_with_email.csv  output.csv  papers.csv  pubmed_gui_tkinter.py  pyproject.toml  results.xlsx
src/get_papers_list/: cli.py  excel_exporter.py  fetcher.py
