[tool.poetry]
name = "get-papers-list"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
  { include = "get_papers_list", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.31.0"
typing-extensions = "^4.12.1"

[tool.poetry.dev-dependencies]
pytest = "^8.2.1"
flake8 = "^7.0.0"

[tool.poetry.scripts]
get-papers-list = "get_papers_list.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
